--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
 }
 
 .hover:hover{
-    transform: rotate(2.5deg);
+    transform: rotate(2.5deg) scale(1.05);
     z-index: 10;
+}
+
+.outOfFocus{
+    filter: grayscale(80%) blur(1px);
 }
