--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,26 @@
-.hover{
-    transition: all 0.3s ease;
+.hover {
+  transition: all 0.3s ease;
 }
 
-.hover:hover{
-    transform: rotate(2.5deg) scale(1.05);
-    z-index: 10;
+.hover:hover {
+  transform: rotate(2.5deg) scale(1.05);
+  z-index: 10;
 }
 
-.outOfFocus{
-    filter: grayscale(80%) blur(1px);
+.outOfFocus {
+  filter: grayscale(80%) blur(1px);
+}
+
+#modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  z-index: 200;
+  background-color: rgba(0, 0, 0, 0.708);
+  justify-content: center;
+  align-items: center;
+}
+
+#modalImg {
+  max-height: 90vh;
 }
